Adding raw_description

--- a/docs/status-effects/current/decrease-acc-2.json
+++ b/docs/status-effects/current/decrease-acc-2.json
@@ -4,6 +4,7 @@
   "value": 0,
   "image_slug": "image-debuff-decrease-acc-2",
   "slug": "decrease-acc-2",
-  "website_link": "/debuff/decrease-acc-2",
-  "extra": true
+  "website_link": "/debuff/decrease-acc",
+  "extra": true,
+  "raw_description": "Reduces the Champion’s Battle ACC by 50%"
 }
