--- a/docs/status-effects/current/decrease-acc.json
+++ b/docs/status-effects/current/decrease-acc.json
@@ -5,5 +5,6 @@
   "image_slug": "image-debuff-decrease-acc",
   "slug": "decrease-acc",
   "website_link": "/debuff/decrease-acc",
-  "extra": false
+  "extra": false,
+  "raw_description": "Reduces the Champion’s Battle ACC by 25%"
 }
