--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -4,6 +4,7 @@
   "value": 0,
   "image_slug": "image-debuff-decrease-atk-2",
   "slug": "decrease-atk-2",
-  "website_link": "/debuff/decrease-atk-2",
-  "extra": true
+  "website_link": "/debuff/decrease-atk",
+  "extra": true,
+  "raw_description": "Decreases the Champion’s Battle ATK by 50%"
 }
