--- a/docs/status-effects/current/decrease-def-2.json
+++ b/docs/status-effects/current/decrease-def-2.json
@@ -4,6 +4,7 @@
   "value": 0,
   "image_slug": "image-debuff-decrease-def-2",
   "slug": "decrease-def-2",
-  "website_link": "/debuff/decrease-def-2",
-  "extra": true
+  "website_link": "/debuff/decrease-def",
+  "extra": true,
+  "raw_description": "Decreases the Champion’s Battle DEF by 60%"
 }
