--- a/docs/status-effects/current/decrease-def.json
+++ b/docs/status-effects/current/decrease-def.json
@@ -5,5 +5,6 @@
   "image_slug": "image-debuff-decrease-def",
   "slug": "decrease-def",
   "website_link": "/debuff/decrease-def",
-  "extra": false
+  "extra": false,
+  "raw_description": "Decreases the Champion’s Battle DEF by 60%"
 }
