--- a/docs/status-effects/current/decrease-spd.json
+++ b/docs/status-effects/current/decrease-spd.json
@@ -5,5 +5,6 @@
   "image_slug": "image-debuff-decrease-spd",
   "slug": "decrease-spd",
   "website_link": "/debuff/decrease-spd",
-  "extra": false
+  "extra": false,
+  "raw_description": "Decreases the Champion’s Battle SPD by 15%"
 }
