--- a/docs/status-effects/current/increase-atk-2.json
+++ b/docs/status-effects/current/increase-atk-2.json
@@ -4,6 +4,7 @@
   "value": 0,
   "image_slug": "image-buff-increase-atk-2",
   "slug": "increase-atk-2",
-  "website_link": "/buff/increase-atk-2",
-  "extra": true
+  "website_link": "/buff/increase-atk",
+  "extra": true,
+  "raw_description": "Increases the Champion’s Battle ATK (current ATK value, all other effects taken into account) by 50%"
 }
