--- a/docs/status-effects/current/increase-c-rate-2.json
+++ b/docs/status-effects/current/increase-c-rate-2.json
@@ -4,6 +4,7 @@
   "value": 0,
   "image_slug": "image-buff-increase-c-rate-2",
   "slug": "increase-c-rate-2",
-  "website_link": "/buff/increase-c-rate-2",
-  "extra": true
+  "website_link": "/buff/increase-c-rate",
+  "extra": true,
+  "raw_description": "Increases the Champion’s C.RATE by 30%"
 }
