--- a/docs/status-effects/current/increase-spd-2.json
+++ b/docs/status-effects/current/increase-spd-2.json
@@ -4,6 +4,7 @@
   "value": 0,
   "image_slug": "image-buff-increase-spd-2",
   "slug": "increase-spd-2",
-  "website_link": "/buff/increase-spd-2",
-  "extra": true
+  "website_link": "/buff/increase-spd",
+  "extra": true,
+  "raw_description": "Increases the Champion’s Battle SPD by 30%"
 }
