--- a/docs/status-effects/current/decrease-atk.json
+++ b/docs/status-effects/current/decrease-atk.json
@@ -5,5 +5,6 @@
   "image_slug": "image-debuff-decrease-atk",
   "slug": "decrease-atk",
   "website_link": "/debuff/decrease-atk",
-  "extra": false
+  "extra": false,
+  "raw_description": "Decreases the Champion’s Battle ATK by 25%"
 }
