--- a/docs/status-effects/current/decrease-spd-2.json
+++ b/docs/status-effects/current/decrease-spd-2.json
@@ -4,6 +4,7 @@
   "value": 0,
   "image_slug": "image-debuff-decrease-spd-2",
   "slug": "decrease-spd-2",
-  "website_link": "/debuff/decrease-spd-2",
-  "extra": true
+  "website_link": "/debuff/decrease-spd",
+  "extra": true,
+  "raw_description": "Decreases the Champion’s Battle SPD by 30%"
 }
