--- a/docs/status-effects/current/increase-atk.json
+++ b/docs/status-effects/current/increase-atk.json
@@ -5,5 +5,6 @@
   "image_slug": "image-buff-increase-atk",
   "slug": "increase-atk",
   "website_link": "/buff/increase-atk",
-  "extra": false
+  "extra": false,
+  "raw_description": "Increases the Champion’s Battle ATK (current ATK value, all other effects taken into account) by 25%"
 }
