--- a/docs/status-effects/current/increase-c-rate.json
+++ b/docs/status-effects/current/increase-c-rate.json
@@ -5,5 +5,6 @@
   "image_slug": "image-buff-increase-c-rate",
   "slug": "increase-c-rate",
   "website_link": "/buff/increase-c-rate",
-  "extra": false
+  "extra": false,
+  "raw_description": "Increases the Champion’s C.RATE by 15%"
 }
