--- a/docs/status-effects/current/increase-def-2.json
+++ b/docs/status-effects/current/increase-def-2.json
@@ -4,6 +4,7 @@
   "value": 0,
   "image_slug": "image-buff-increase-def-2",
   "slug": "increase-def-2",
-  "website_link": "/buff/increase-def-2",
-  "extra": true
+  "website_link": "/buff/increase-def",
+  "extra": true,
+  "raw_description": "Increases the Champion’s Battle DEF by 60%"
 }
