--- a/docs/status-effects/current/increase-def.json
+++ b/docs/status-effects/current/increase-def.json
@@ -5,5 +5,6 @@
   "image_slug": "image-buff-increase-def",
   "slug": "increase-def",
   "website_link": "/buff/increase-def",
-  "extra": false
+  "extra": false,
+  "raw_description": "Increases the Champion’s Battle DEF by 30%"
 }
