--- a/docs/status-effects/current/increase-spd.json
+++ b/docs/status-effects/current/increase-spd.json
@@ -5,5 +5,6 @@
   "image_slug": "image-buff-increase-spd",
   "slug": "increase-spd",
   "website_link": "/buff/increase-spd",
-  "extra": false
+  "extra": false,
+  "raw_description": "Increases the Champion’s Battle SPD by 30%"
 }
