Adding giid for other champions

--- a/docs/champions/current/grappler.json
+++ b/docs/champions/current/grappler.json
@@ -81,7 +81,7 @@
       "damaged_based_on": [
         "ATK"
       ],
-      "giid": "",
+      "giid": "2690_s1",
       "upgrades": [
         {
           "level": "Level 1",
@@ -282,7 +282,7 @@
           "raw_detail": "Chance +10%"
         }
       ],
-      "image_slug": "",
+      "image_slug": "b5c9919f85488eb0221a39d2ea6bc365",
       "skill_number": "A1"
     },
     {
@@ -310,7 +310,7 @@
       "damaged_based_on": [
         "ATK"
       ],
-      "giid": "",
+      "giid": "2690_s2",
       "upgrades": [
         {
           "level": "Level 1",
@@ -511,7 +511,7 @@
           "raw_detail": "Cooldown -1"
         }
       ],
-      "image_slug": "",
+      "image_slug": "0001050ae57289afbf56874cfa75fafc",
       "skill_number": "A2"
     },
     {
@@ -537,7 +537,7 @@
         }
       ],
       "damaged_based_on": [],
-      "giid": "",
+      "giid": "2690_s3",
       "upgrades": [
         {
           "level": "Level 1",
@@ -834,7 +834,7 @@
           "raw_detail": "Cooldown -1"
         }
       ],
-      "image_slug": "",
+      "image_slug": "31aa0ee6d6a78bf25b4e89b97c53f28b",
       "skill_number": "A3"
     }
   ],
@@ -896,5 +896,5 @@
   "default_description": "Grappler is a rare def champion from the faction Skinwalker doing spirit damage",
   "recommended_builds": [],
   "lore": "",
-  "giid": ""
+  "giid": "2690"
 }
