Adding heal + turn meter increase for further filtering

--- a/docs/status-effects/current/decrease-acc-2.json
+++ b/docs/status-effects/current/decrease-acc-2.json
@@ -10,5 +10,6 @@
   "website_link": "/debuffs/decrease-acc",
   "extra": true,
   "raw_description": "Reduces the Champion’s Battle ACC by 50%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
