--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -10,5 +10,6 @@
   "website_link": "/debuffs/decrease-atk",
   "extra": true,
   "raw_description": "Decreases the Champion’s Battle ATK by 50%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
