--- a/docs/status-effects/current/decrease-atk.json
+++ b/docs/status-effects/current/decrease-atk.json
@@ -10,5 +10,6 @@
   "website_link": "/debuffs/decrease-atk",
   "extra": false,
   "raw_description": "Decreases the Champion’s Battle ATK by 25%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
