--- a/docs/status-effects/current/decrease-def-2.json
+++ b/docs/status-effects/current/decrease-def-2.json
@@ -10,5 +10,6 @@
   "website_link": "/debuffs/decrease-def",
   "extra": true,
   "raw_description": "Decreases the Champion’s Battle DEF by 60%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
