--- a/docs/status-effects/current/decrease-spd-2.json
+++ b/docs/status-effects/current/decrease-spd-2.json
@@ -10,5 +10,6 @@
   "website_link": "/debuffs/decrease-spd",
   "extra": true,
   "raw_description": "Decreases the Champion’s Battle SPD by 30%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
