--- a/docs/status-effects/current/increase-c-rate.json
+++ b/docs/status-effects/current/increase-c-rate.json
@@ -10,5 +10,6 @@
   "website_link": "/buffs/increase-c-rate",
   "extra": false,
   "raw_description": "Increases the Champion’s C.RATE by 15%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
