--- a/docs/status-effects/current/increase-def.json
+++ b/docs/status-effects/current/increase-def.json
@@ -10,5 +10,6 @@
   "website_link": "/buffs/increase-def",
   "extra": false,
   "raw_description": "Increases the Champion’s Battle DEF by 30%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
