--- a/docs/status-effects/current/increase-spd.json
+++ b/docs/status-effects/current/increase-spd.json
@@ -10,5 +10,6 @@
   "website_link": "/buffs/increase-spd",
   "extra": false,
   "raw_description": "Increases the Champion’s Battle SPD by 15%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
