--- a/docs/status-effects/current/decrease-acc.json
+++ b/docs/status-effects/current/decrease-acc.json
@@ -10,5 +10,6 @@
   "website_link": "/debuffs/decrease-acc",
   "extra": false,
   "raw_description": "Reduces the Champion’s Battle ACC by 25%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
