--- a/docs/status-effects/current/increase-atk.json
+++ b/docs/status-effects/current/increase-atk.json
@@ -10,5 +10,6 @@
   "website_link": "/buffs/increase-atk",
   "extra": false,
   "raw_description": "Increases the Champion’s Battle ATK (current ATK value, all other effects taken into account) by 25%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
