--- a/docs/status-effects/current/increase-def-2.json
+++ b/docs/status-effects/current/increase-def-2.json
@@ -10,5 +10,6 @@
   "website_link": "/buffs/increase-def",
   "extra": true,
   "raw_description": "Increases the Champion’s Battle DEF by 60%",
-  "places_if": ""
+  "places_if": "",
+  "amount": 0
 }
