--- a/docs/champions/current/grappler.json
+++ b/docs/champions/current/grappler.json
@@ -866,7 +866,7 @@
   "image_slug": "image-champion-grappler",
   "seo": {
     "title": "%%title%% %%page%% %%sep%% %%parent_title%% %%sep%% %%sitename%%",
-    "description": "Grappler is a rare def champion from the faction Skinwalker doing spirit damage. Find out more on this Raid Shadow Legends codex.",
+    "description": "Grappler is a rare def champion from the faction Skinwalkers doing spirit damage. Find out more on this Raid Shadow Legends codex.",
     "keywords": [
       "raid",
       "shadow",
@@ -884,9 +884,9 @@
         "affiliation": {
           "@context": "http://schema.org",
           "@type": "Organization",
-          "name": "Skinwalker"
+          "name": "Skinwalkers"
         },
-        "description": "Member of the faction Skinwalker, Grappler is a champion of Rare rarity and of Def type",
+        "description": "Member of the faction Skinwalkers, Grappler is a champion of Rare rarity and of Def type",
         "image": "https://raid-codex.com/wp-content/uploads/champions/image-champion-grappler.jpg",
         "name": "Grappler",
         "url": "https://raid-codex.com/champions/grappler/"
