--- a/docs/champions/current/reinbeast.json
+++ b/docs/champions/current/reinbeast.json
@@ -576,7 +576,7 @@
   "image_slug": "image-champion-reinbeast",
   "seo": {
     "title": "%%title%% %%page%% %%sep%% %%parent_title%% %%sep%% %%sitename%%",
-    "description": "Reinbeast is a epic def champion from the faction Skinwalker doing force damage. Find out more on this Raid Shadow Legends codex.",
+    "description": "Reinbeast is a epic def champion from the faction Skinwalkers doing force damage. Find out more on this Raid Shadow Legends codex.",
     "keywords": [
       "raid",
       "shadow",
@@ -594,9 +594,9 @@
         "affiliation": {
           "@context": "http://schema.org",
           "@type": "Organization",
-          "name": "Skinwalker"
+          "name": "Skinwalkers"
         },
-        "description": "Member of the faction Skinwalker, Reinbeast is a champion of Epic rarity and of Def type",
+        "description": "Member of the faction Skinwalkers, Reinbeast is a champion of Epic rarity and of Def type",
         "image": "https://raid-codex.com/wp-content/uploads/champions/image-champion-reinbeast.jpg",
         "name": "Reinbeast",
         "url": "https://raid-codex.com/champions/reinbeast/"
