--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,4 +15,4 @@ jobs:
         python3 scripts/deploy_api.py
     - name: Deploy HTML
       run: |
-        python3 scripts/deploy_pages.py
+        python3 scripts/deploy_champions.py
