--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Deploy API
       run: |
-        python3 scripts/deploy_api.py
+        BASE_DIR=`pwd` python3 scripts/deploy_api.py
     - name: Deploy HTML
       run: |
-        python3 scripts/deploy_champions.py
+        BASE_DIR=`pwd` python3 scripts/deploy_champions.py
