--- a/docs/status-effects/current/increase-acc.json
+++ b/docs/status-effects/current/increase-acc.json
@@ -1,5 +1,5 @@
 {
-  "date_added": "2020-02-12T12:00:00+01:00",
+  "date_added": "",
   "effect_type": "buff",
   "type": "Increase ACC",
   "value": 0.25,
@@ -12,9 +12,5 @@
   "extra": false,
   "raw_description": "Increases ACC by 25%",
   "places_if": "",
-  "amount": 0,
-  "possible_values": [
-    "Increase ACC"
-  ],
-  "champion_slugs": []
+  "amount": 0
 }
