--- a/docs/status-effects/current/decrease-c-rate-2.json
+++ b/docs/status-effects/current/decrease-c-rate-2.json
@@ -1,5 +1,5 @@
 {
-  "date_added": "2020-02-12T12:00:00+01:00",
+  "date_added": "",
   "effect_type": "debuff",
   "type": "Decrease C. RATE",
   "value": 0.3,
@@ -12,12 +12,5 @@
   "extra": true,
   "raw_description": "Decreases Critical Rate chance by 30%",
   "places_if": "",
-  "amount": 0,
-  "possible_values": [
-    "Decrease C. RATE",
-    "Decrease C.RATE"
-  ],
-  "champion_slugs": [
-    "ursine-icecrusher"
-  ]
+  "amount": 0
 }
