--- a/docs/status-effects/current/decrease-c-rate.json
+++ b/docs/status-effects/current/decrease-c-rate.json
@@ -1,5 +1,5 @@
 {
-  "date_added": "2020-02-12T12:00:00+01:00",
+  "date_added": "",
   "effect_type": "debuff",
   "type": "Decrease C. RATE",
   "value": 0.15,
@@ -12,10 +12,5 @@
   "extra": false,
   "raw_description": "Decreases Critical Rate chance by 15%",
   "places_if": "",
-  "amount": 0,
-  "possible_values": [
-    "Decrease C. RATE",
-    "Decrease C.RATE"
-  ],
-  "champion_slugs": []
+  "amount": 0
 }
