--- a/docs/status-effects/current/increase-acc-2.json
+++ b/docs/status-effects/current/increase-acc-2.json
@@ -1,5 +1,5 @@
 {
-  "date_added": "2020-02-12T12:00:00+01:00",
+  "date_added": "",
   "effect_type": "buff",
   "type": "Increase ACC",
   "value": 0.5,
@@ -12,11 +12,5 @@
   "extra": true,
   "raw_description": "Increases ACC by 50%",
   "places_if": "",
-  "amount": 0,
-  "possible_values": [
-    "Increase ACC"
-  ],
-  "champion_slugs": [
-    "stag-knight"
-  ]
+  "amount": 0
 }
