--- a/docs/status-effects/current/increase-c-dmg-2.json
+++ b/docs/status-effects/current/increase-c-dmg-2.json
@@ -1,5 +1,5 @@
 {
-  "date_added": "2020-02-12T12:00:00+01:00",
+  "date_added": "",
   "effect_type": "buff",
   "type": "Increase C. DMG",
   "value": 0.3,
@@ -12,12 +12,5 @@
   "extra": true,
   "raw_description": "Increases Critical Damage by 30%",
   "places_if": "",
-  "amount": 0,
-  "possible_values": [
-    "Increase C. DMG",
-    "Increase C.DMG"
-  ],
-  "champion_slugs": [
-    "wurlim-frostking"
-  ]
+  "amount": 0
 }
