fix: added dates of addition
Signed-off-by: Geoffrey Bauduin <geoffrey.bauduin@ovhcloud.com>

--- a/docs/status-effects/current/increase-acc.json
+++ b/docs/status-effects/current/increase-acc.json
@@ -1,5 +1,5 @@
 {
-  "date_added": "",
+  "date_added": "2020-02-12T12:00:00+01:00",
   "effect_type": "buff",
   "type": "Increase ACC",
   "value": 0.25,
