--- a/docs/champions/current/grappler.json
+++ b/docs/champions/current/grappler.json
@@ -362,10 +362,10 @@
           "chance": 0,
           "turns": 0,
           "target": null,
-          "image_slug": "image-debuff-poison-2",
-          "slug": "poison-2",
+          "image_slug": "image-debuff-poison",
+          "slug": "poison",
           "website_link": "/effects/poison",
-          "extra": true,
+          "extra": false,
           "raw_description": "",
           "places_if": "",
           "amount": 0
@@ -1209,7 +1209,6 @@
   "fusion_data": [],
   "effect_slugs": [
     "poison",
-    "poison-2",
     "reflect-damage",
     "shield",
     "weaken"
