--- a/docs/battle-pass/season-01.json
+++ b/docs/battle-pass/season-01.json
@@ -90,7 +90,7 @@
                 "points": 12
             }],
             "rewards": [{
-                "raw_description": "6x 6 stars Divine Critical Rate artifacts"
+                "raw_description": "6x 6<i class=\"fa fa-star\"></i> Divine Critical Rate artifacts"
             }]
         }]
     }
