feat: added fear debuff

--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -41,6 +41,7 @@
     "tayrel",
     "tomb-lord",
     "hegemon",
+    "golden-reaper",
     "sepulcher-sentinel",
     "gladiator",
     "coffin-smasher",
