--- a/.github/workflows/tier-list-ayumilove.yml
+++ b/.github/workflows/tier-list-ayumilove.yml
@@ -21,6 +21,8 @@ jobs:
     - name: "parse champions"
       run: |
         for slug in $(python -c 'import sys, json; r = json.load(sys.stdin); print(" ".join([d["slug"] for d in r]));' < ./docs/champions/current/index.json); do echo "doing $slug"; raid-codex-cli scrap ayumilove champions --champion-slug $slug --data-directory . --with-ratings || true; done;
+        make sanitize_champions
+        make rebuild_index_champions
     - name: "commit changes"
       uses: peter-evans/create-pull-request@v2
       with:
