--- a/.github/workflows/tier-list.yml
+++ b/.github/workflows/tier-list.yml
@@ -18,6 +18,8 @@ jobs:
         go install github.com/raid-codex/tools/cmd/raid-codex-cli
     - name: "hellhades"
       run: |
+        echo $PATH
+        echo $GOPATH
         export PATH=$GOPATH/bin:$PATH
         bash ./scripts/hellhades-tier-list.sh
     - name: "ayumilove"
