--- a/.github/workflows/tier-list.yml
+++ b/.github/workflows/tier-list.yml
@@ -1,8 +1,8 @@
 name: tier-list
 
-on: [push]
-  #schedule:
-  #  - cron: "0 9 * * *"
+on:
+  schedule:
+    - cron: "0 19 * * *"
 
 jobs:
   build:
