feat: added week 3 to season 1 battle pass

--- a/docs/battle-pass/season-01.json
+++ b/docs/battle-pass/season-01.json
@@ -49,6 +49,9 @@
         }, {
             "raw_description": "Defeat an enemy in a single hit in the Arena 3 times",
             "points": 5
+        }, {
+            "raw_description": "Upgrade a Champion’s level in the sparring pit 2 times",
+            "points": 5
         }],
         "weekly": [{
             "week": 1,
@@ -62,7 +65,7 @@
                 "raw_description": "Place 100 debuffs on Dungeon bosses while beating them (only counting won battles)",
                 "points": 12
             }, {
-                "raw_description": "Upgrade champions' levels in the sparringpit 25 times",
+                "raw_description": "Upgrade champions' levels in the sparring pit 25 times",
                 "points": 12
             }, {
                 "raw_description": "Sell 75 artifacts",
@@ -90,7 +93,28 @@
                 "points": 12
             }],
             "rewards": [{
-                "raw_description": "6x 6<i class=\"fa fa-star\"></i> Divine Critical Rate artifacts"
+                "raw_description": "6x 5<i class=\"fa fa-star\"></i> Divine Critical Rate artifacts"
+            }]
+        }, {
+            "week": 3,
+            "quests": [{
+                "raw_description": "Win 40 Arena Battles without losing a Champion",
+                "points": 12
+            }, {
+                "raw_description": "Ascend 1 Champion from each Faction",
+                "points": 12
+            }, {
+                "raw_description": "Defeat 100 Dungeon Boss minions (including spiderlings)",
+                "points": 12
+            }, {
+                "raw_description": "Win 50 Campaign Battles using 4 Champions of the same Faction",
+                "points": 12
+            }, {
+                "raw_description": "Get 15 artifacts from the Market",
+                "points": 12
+            }],
+            "rewards": [{
+                "raw_description": "6x 5<i class=\"fa fa-star\"></i> Crit Damage artifacts"
             }]
         }]
     }
