feat: battle pass week 4

--- a/docs/battle-pass/season-01.json
+++ b/docs/battle-pass/season-01.json
@@ -116,6 +116,27 @@
             "rewards": [{
                 "raw_description": "6x 5<i class=\"fa fa-star\"></i> Crit Damage artifacts"
             }]
+        }, {
+            "week": 4,
+            "quests": [{
+                "raw_description": "Win 10 champion rewards from Campaign Battles",
+                "points": 12
+            }, {
+                "raw_description": "Heal 1000 times in Dungeon Battles (includes Lifesteal, Leech, Continuous Heal, etc.)",
+                "points": 12
+            }, {
+                "raw_description": "Upgrade a Champion's Rank by sacrificing duplicate Champions",
+                "points": 12
+            }, {
+                "raw_description": "Place Stun, Sleep, or Freeze debuffs in the Arena 60 times (Only counted from Battles won)",
+                "points": 12
+            }, {
+                "raw_description": "Unlock or Upgrade 50 substats on Artifacts",
+                "points": 12
+            }],
+            "rewards": [{
+                "raw_description": "1 Epic Tome"
+            }]
         }]
     }
 }
