fix: status effects

--- a/docs/status-effects/current/increase-c-rate-2.json
+++ b/docs/status-effects/current/increase-c-rate-2.json
@@ -18,6 +18,7 @@
     "Increase C.RATE"
   ],
   "champion_slugs": [
+    "cillian-the-lucky",
     "hordin",
     "crossbowman",
     "turvold",
@@ -40,8 +41,8 @@
     "siphi-the-lost-bride",
     "skartorsis",
     "ma-shalled",
-    "mausoleum-mage",
     "dark-elhain",
+    "mausoleum-mage",
     "temptress"
   ]
 }
