feat: updated battle pass season 1

--- a/docs/battle-pass/season-01.json
+++ b/docs/battle-pass/season-01.json
@@ -137,6 +137,69 @@
             "rewards": [{
                 "raw_description": "1 Epic Tome"
             }]
+        }, {
+            "week": 5,
+            "quests": [{
+                "raw_description": "Get the first turn in the Arena 50 times (Only counted from Battles won)",
+                "points": 12
+            }, {
+                "raw_description": "Defeat 360 enemies in Campaign Battles using 3+ Uncommon Champions",
+                "points": 12
+            }, {
+                "raw_description": "Get 260 mastery scroll for one Champion",
+                "points": 12
+            }, {
+                "raw_description": "Ascend Champions from each Affinity 3 times",
+                "points": 12
+            }, {
+                "raw_description": "Sell 50 Accessories (Does not work with Auto-Sell from Multi-Battles)",
+                "points": 12
+            }],
+            "rewards": [{
+                "raw_description": "6x 5<i class=\"fa fa-star\"></i> Attack artifacts"
+            }]
+        }, {
+            "week": 6,
+            "quests": [{
+                "raw_description": "Fill or Decrease Turn Meters 100 times in the Arena",
+                "points": 12
+            }, {
+                "raw_description": "Places Stun, Sleep, or Freeze debuffs in Campaign Battles 100 times (Only counted from Battles won)",
+                "points": 12
+            }, {
+                "raw_description": "Win Artifacts from all basic Sets (Life, Offense, Speed, Critical Rate, Resistance and Accuracy) from Battles",
+                "points": 12
+            }, {
+                "raw_description": "Upgrade Champions' Levels only with XP Brews 100 times",
+                "points": 12
+            }, {
+                "raw_description": "Place Heal Reduction debuffs on the Fire Knight 100 times (Only counted from Battles won)",
+                "points": 12
+            }],
+            "rewards": [{
+                "raw_description": "6x 5<i class=\"fa fa-star\"></i> Immortal artifacts"
+            }]
+        }, {
+            "week": 7,
+            "quests": [{
+                "raw_description": "Place 100 debuffs in Campaign Battles (Only counted from Battles won)",
+                "points": 12
+            }, {
+                "raw_description": "Ugrade 10 Champions to a higher Rank",
+                "points": 12
+            }, {
+                "raw_description": "Defeat 100 enemies in a single in the Arena",
+                "points": 12
+            }, {
+                "raw_description": "Unlock of Upgrade 50 substats on Accessories",
+                "points": 12
+            }, {
+                "raw_description": "Place Decrease DEF debuffs on Dungeon Bosses 100 times while beating them (Only counted from Battles won)",
+                "points": 12
+            }],
+            "rewards": [{
+                "raw_description": "6x 5<i class=\"fa fa-star\"></i> Cruel artifacts"
+            }]
         }]
     }
 }
