chore: rebuilt everything

--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -47,6 +47,7 @@
     "runic-warder",
     "sentinel",
     "sepulcher-sentinel",
+    "skull-lord-var-grall",
     "spider",
     "stag-knight",
     "tayrel",
