--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -73,6 +73,7 @@
     "sikara",
     "siphi-the-lost-bride",
     "skartorsis",
+    "skull-lord-var-grall",
     "skullsworn",
     "skytouched-shaman",
     "sniper",
