feat: added new fusoin

--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -47,7 +47,7 @@
     "runic-warder",
     "sentinel",
     "sepulcher-sentinel",
-    "skull-lord-var-grall",
+    "skull-lord-var-gall",
     "spider",
     "stag-knight",
     "tayrel",
