fix: sanitized everything

--- a/docs/status-effects/current/increase-def-2.json
+++ b/docs/status-effects/current/increase-def-2.json
@@ -21,6 +21,8 @@
     "belanor",
     "black-knight",
     "canoness",
+    "captain-temila",
+    "cardinal",
     "cataphract",
     "crimson-helm",
     "doomscreech",
@@ -43,6 +45,7 @@
     "steadfast-marshal",
     "steelskull",
     "stoneskin",
+    "thenasil",
     "towering-titan",
     "tyrant-ixlimor",
     "valla",
