--- a/.github/workflows/master2prod.yml
+++ b/.github/workflows/master2prod.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
       name: git pull
       with:
-        directory: src/github.com/raid-codex/data
+        path: src/github.com/raid-codex/data
     - uses: actions/setup-go@v1
       name: "setup go"
       with:
