--- a/docs/champions/current/beast-wrestler.json
+++ b/docs/champions/current/beast-wrestler.json
@@ -509,6 +509,10 @@
   ],
   "fusion_data": [
     {
+      "fusion_slug": "fusion-gurptuk-moss-beard-seneschal",
+      "fusion_type": "ingredient"
+    },
+    {
       "fusion_slug": "fusion-harvest-jack-maeve",
       "fusion_type": "ingredient"
     },
