feat: added kantra

--- a/docs/status-effects/current/decrease-acc-2.json
+++ b/docs/status-effects/current/decrease-acc-2.json
@@ -31,6 +31,7 @@
     "hexweaver",
     "honor-guard",
     "judge",
+    "kantra-the-cyclone",
     "lich",
     "lord-champfort",
     "magmablood",
