--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -34,6 +34,7 @@
     "infernal-baroness",
     "jarang",
     "judge",
+    "kantra-the-cyclone",
     "khoronar",
     "krisk-the-ageless",
     "lightsworn",
