--- a/docs/status-effects/current/decrease-spd-2.json
+++ b/docs/status-effects/current/decrease-spd-2.json
@@ -36,6 +36,7 @@
     "high-khatun",
     "jinglehunter",
     "judge",
+    "kantra-the-cyclone",
     "krisk-the-ageless",
     "lich",
     "lightsworn",
