--- a/docs/champions/current/stitched-beast.json
+++ b/docs/champions/current/stitched-beast.json
@@ -513,6 +513,10 @@
       "fusion_type": "ingredient"
     },
     {
+      "fusion_slug": "fusion-kantra-the-cyclone-bushi",
+      "fusion_type": "ingredient"
+    },
+    {
       "fusion_slug": "fusion-sikara",
       "fusion_type": "ingredient"
     }
