feat: added kreela

--- a/docs/status-effects/current/increase-atk-2.json
+++ b/docs/status-effects/current/increase-atk-2.json
@@ -38,6 +38,7 @@
     "hexia",
     "hordin",
     "huntress",
+    "kreela-witch-arm",
     "kytis",
     "lanakis-the-chosen",
     "lord-shazar",
