--- a/docs/status-effects/current/increase-c-rate-2.json
+++ b/docs/status-effects/current/increase-c-rate-2.json
@@ -31,6 +31,7 @@
     "hexweaver",
     "hordin",
     "juliana",
+    "kreela-witch-arm",
     "lanakis-the-chosen",
     "ma-shalled",
     "mausoleum-mage",
