feat: added drokgul the gaunt

--- a/docs/status-effects/current/increase-atk-2.json
+++ b/docs/status-effects/current/increase-atk-2.json
@@ -28,6 +28,7 @@
     "dark-elhain",
     "delver",
     "doompriest",
+    "drokgul-the-gaunt",
     "duchess-lilitu",
     "flesheater",
     "frostbringer",
