--- a/docs/status-effects/current/increase-def-2.json
+++ b/docs/status-effects/current/increase-def-2.json
@@ -26,6 +26,7 @@
     "cataphract",
     "crimson-helm",
     "doomscreech",
+    "drokgul-the-gaunt",
     "elder-skarg",
     "executioner",
     "grizzled-jarl",
