--- a/docs/status-effects/current/increase-atk-2.json
+++ b/docs/status-effects/current/increase-atk-2.json
@@ -45,6 +45,7 @@
     "lord-shazar",
     "relickeeper",
     "royal-huntsman",
+    "saito",
     "seeker",
     "siphi-the-lost-bride",
     "skartorsis",
