feat: updated some champions after 2.20

--- a/docs/status-effects/current/decrease-def-2.json
+++ b/docs/status-effects/current/decrease-def-2.json
@@ -41,6 +41,7 @@
     "ghostborn",
     "gravechill-killer",
     "hellgazer",
+    "hexia",
     "hound-spawn",
     "jarang",
     "judge",
@@ -64,6 +65,7 @@
     "sorceress",
     "spider",
     "stag-knight",
+    "suwai-firstborn",
     "suzerain-katonn",
     "tayrel",
     "tomb-lord",
