--- a/docs/status-effects/current/increase-c-rate-2.json
+++ b/docs/status-effects/current/increase-c-rate-2.json
@@ -21,6 +21,7 @@
     "anointed",
     "belanor",
     "broadmaw",
+    "bushi",
     "cillian-the-lucky",
     "crossbowman",
     "dark-elhain",
@@ -40,7 +41,6 @@
     "siegebreaker",
     "siphi-the-lost-bride",
     "skartorsis",
-    "suwai-firstborn",
     "tallia",
     "temptress",
     "turvold",
