--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -23,8 +23,10 @@
     "arbiter",
     "archer",
     "astralith",
+    "azure",
     "berserker",
     "bloodpainter",
+    "bonekeeper",
     "cardinal",
     "channeler",
     "cillian-the-lucky",
