feat: updated missing champions from 2.20 rebalance

--- a/docs/status-effects/current/increase-spd-2.json
+++ b/docs/status-effects/current/increase-spd-2.json
@@ -19,6 +19,7 @@
   "champion_slugs": [
     "apothecary",
     "bombardier",
+    "candraphon",
     "channeler",
     "dark-athel",
     "diabolist",
