--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -27,6 +27,7 @@
     "berserker",
     "bloodpainter",
     "bonekeeper",
+    "candraphon",
     "cardinal",
     "channeler",
     "cillian-the-lucky",
