feat: added skills for ursuga and baroth

--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -19,10 +19,12 @@
   "champion_slugs": [
     "adriel",
     "altan",
+    "baroth-the-bloodsoaked",
     "bogwalker",
     "coffin-smasher",
     "crimson-helm",
     "crypt-king-graal",
+    "fayne",
     "ghrush-the-mangler",
     "gladiator",
     "golden-reaper",
@@ -54,6 +56,7 @@
     "tayrel",
     "tomb-lord",
     "ursine-ironhide",
+    "ursuga-warcaller",
     "veteran",
     "vizier-ovelis",
     "war-mother",
