--- a/docs/status-effects/current/decrease-def-2.json
+++ b/docs/status-effects/current/decrease-def-2.json
@@ -20,6 +20,7 @@
     "abbess",
     "aina",
     "baron",
+    "baroth-the-bloodsoaked",
     "belanor",
     "bloodfeather",
     "bloodgorged",
@@ -31,6 +32,7 @@
     "defiled-sinner",
     "delver",
     "dracomorph",
+    "fayne",
     "fenax",
     "fleshmonger",
     "foli",
@@ -70,6 +72,7 @@
     "tayrel",
     "tomb-lord",
     "towering-titan",
+    "ursuga-warcaller",
     "valla",
     "vergumkaar",
     "vulpine",
