--- a/docs/status-effects/current/increase-atk.json
+++ b/docs/status-effects/current/increase-atk.json
@@ -20,6 +20,7 @@
     "arbiter",
     "arcanist",
     "athel",
+    "baroth-the-bloodsoaked",
     "basilisk",
     "battlesage",
     "bloodpainter",
