--- a/docs/status-effects/current/increase-def.json
+++ b/docs/status-effects/current/increase-def.json
@@ -20,6 +20,7 @@
     "altan",
     "amarantine-skeleton",
     "athel",
+    "baroth-the-bloodsoaked",
     "belanor",
     "bogwalker",
     "canoness",
