--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -24,6 +24,7 @@
     "archer",
     "astralith",
     "azure",
+    "baroth-the-bloodsoaked",
     "berserker",
     "bloodpainter",
     "bonekeeper",
@@ -38,6 +39,7 @@
     "doomscreech",
     "excruciator",
     "fang-cleric",
+    "fayne",
     "fencer",
     "foli",
     "frozen-banshee",
