feat: added skills for kaiden

--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -36,6 +36,7 @@
     "infernal-baroness",
     "jarang",
     "judge",
+    "kaiden",
     "kantra-the-cyclone",
     "khoronar",
     "krisk-the-ageless",
