feat: updated champions

--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -19,6 +19,7 @@
   "champion_slugs": [
     "adriel",
     "altan",
+    "avir-the-alchemage",
     "baroth-the-bloodsoaked",
     "bogwalker",
     "coffin-smasher",
