--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -23,6 +23,7 @@
     "arbiter",
     "archer",
     "astralith",
+    "avir-the-alchemage",
     "azure",
     "baroth-the-bloodsoaked",
     "berserker",
