feat(gloril brutebane): added skills
Fixes #291

--- a/docs/status-effects/current/increase-c-rate.json
+++ b/docs/status-effects/current/increase-c-rate.json
@@ -30,6 +30,7 @@
     "eviscerator",
     "faceless",
     "fleshmonger",
+    "gloril-brutebane",
     "hexweaver",
     "hordin",
     "hospitaller",
