feat(dilgol & sanctum protector): added skills

--- a/docs/status-effects/current/increase-def.json
+++ b/docs/status-effects/current/increase-def.json
@@ -44,6 +44,7 @@
     "metalshaper",
     "romero",
     "rotting-mage",
+    "sanctum-protector",
     "seducer",
     "seeker",
     "steelskull",
