fix(ma shalled): skills
Fixes #285

--- a/docs/status-effects/current/increase-c-dmg-2.json
+++ b/docs/status-effects/current/increase-c-dmg-2.json
@@ -21,6 +21,7 @@
     "candraphon",
     "cillian-the-lucky",
     "dark-elhain",
+    "ma-shalled",
     "saito",
     "suwai-firstborn",
     "wurlim-frostking"
