fix(cagebreaker): skills
Fixes #282

--- a/docs/status-effects/current/decrease-def-2.json
+++ b/docs/status-effects/current/decrease-def-2.json
@@ -26,6 +26,7 @@
     "bloodgorged",
     "bonekeeper",
     "bystophus",
+    "cagebreaker",
     "crypt-witch",
     "dark-athel",
     "deathless",
