fix(templar): skills
Fixes #280

--- a/docs/status-effects/current/decrease-spd-2.json
+++ b/docs/status-effects/current/decrease-spd-2.json
@@ -58,6 +58,7 @@
     "stoneskin",
     "suzerain-katonn",
     "tainix-hateflower",
+    "templar",
     "tomb-lord",
     "ursuga-warcaller",
     "visix-the-unbowed"
