feat: added skills for some champions

--- a/docs/status-effects/current/decrease-spd-2.json
+++ b/docs/status-effects/current/decrease-spd-2.json
@@ -60,6 +60,7 @@
     "tainix-hateflower",
     "templar",
     "tomb-lord",
+    "tuhak-the-wanderer",
     "ursuga-warcaller",
     "visix-the-unbowed"
   ]
