--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -86,6 +86,7 @@
     "stoneskin",
     "theurgist",
     "tomb-lord",
+    "tuhak-the-wanderer",
     "ultimate-galek",
     "ursine-icecrusher",
     "valkyrie",
