feat: updated champions without skills

--- a/docs/status-effects/current/decrease-def.json
+++ b/docs/status-effects/current/decrease-def.json
@@ -37,6 +37,8 @@
     "deathless",
     "delver",
     "dervish",
+    "drowned-bloatwraith",
+    "dunestrider",
     "eviscerator",
     "fenax",
     "fencer",
