--- a/docs/status-effects/current/decrease-turn-meter.json
+++ b/docs/status-effects/current/decrease-turn-meter.json
@@ -30,6 +30,7 @@
     "confessor",
     "crimson-slayer",
     "diabolist",
+    "dunestrider",
     "elfguard",
     "excruciator",
     "executioner",
